[package]
name = "AI_project"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.1"
linfa = "0.7.1"
linfa-clustering = "0.7.1"
linfa-nn = "0.7.1"
linfa-trees = "0.7.1"
ndarray = {version = "0.15.6", features = ["serde"]}
ndarray-npy = { version = "0.8", default-features = false }
ndarray-csv = { version = "0.5.2", default-features = false }
ndarray-rand = "0.15.0"
rand_xoshiro = "0.6"
